# feature_erasure_pybind

./: AUTHORS  CMakeLists.txt  README  Readme.md  conanfile.txt
.github/workflows/: coding_style.yml
include/pln/core/: invalid_arg.hh  se.hpp  type.hh
src/: bindings.cc  convert.cc  convert.hh  func.cc  main.cc  type.cc
tests/: test.cc  test_convert.py
